# dev-portfolio

./: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: run-unittests.yml
dev-portfolio/templates/: index.html
projectX/: __init__.py  core.py
projectX/moduleX/: __init__.py  func.py
src/: App.tsx
src/components/: About.tsx  Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  ProjectCard.tsx  Projects.tsx  Skills_new.tsx  Skills_old.tsx  index.ts
tests/: test_core.py
tests/moduleX/: test_func.py
